# hello-rust-rocket-mongo

./: .dockerignore  .gitignore  Cargo.toml  README.md  Rocket.toml  docker-compose.yml  docker.mk
.devcontainer/: devcontainer.json  docker-compose.yml
docker/mongo/: Dockerfile
docker/rust/: Dockerfile
src/: main.rs
