[package]
authors = ["tamakiii"]
edition = "2018"
name = "hello-rust-rocket-mongo"
version = "0.1.0"

[dependencies]
mongodb = "0.4.0"
r2d2 = "0.8.8"
r2d2-mongodb = "0.2.2"
rocket = "0.4.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
criterion = "0.3.1"
serde_derive = "1.0.104"

[dependencies.rocket_contrib]
version = "0.4.2"
features = ["json"]
default-features = false

[lib]
name = "mylib"
# crate-type = ["staticlib"]
# crate-type = ["dylib"]