[package]
authors = ["tamakiii"]
edition = "2018"
name = "hello-rust-rocket-mongo"
version = "0.1.0"

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["mongodb_pool", "diesel_sqlite_pool"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = "1.0.48"
criterion = "0.3.1"